<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <TextView
        android:textSize="25sp"
        android:id="@+id/author"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/huruf"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"
        android:text="@string/akselerasi"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:fontFamily="@font/asap_medium"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>

    <TextView
        android:id="@+id/terdiri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"
        android:textSize="20sp"
        android:text="@string/terdiri"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:fontFamily="@font/exo_bold"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>

    <TextView
        android:id="@+id/anggota"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/Fadiya"
        android:textColor="@color/huruf"
        app:fontFamily="@font/allerta"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>

            <TextView
                android:id="@+id/pad"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:text="@string/pad"
                app:fontFamily="@font/allerta"/>

    <TextView
        android:id="@+id/sapi"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/Safira"
        app:fontFamily="@font/allerta"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>

    <TextView
        android:id="@+id/anggi"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/Anggi"
        app:fontFamily="@font/allerta"
        android:paddingStart="10dp"
        android:paddingBottom="60dp"
        android:paddingEnd="10dp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>