<?xml version="1.0" encoding="utf-8"?>
<<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/keutamaan"
            android:layout_width="10dp"
            android:layout_height="125dp"
            android:layout_alignStart="@+id/segera"
            android:layout_alignLeft="@+id/segera"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:contentPadding="10dp">

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/keutamaanhaji"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:padding="5dp"
                    android:src="@mipmap/berdebat" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/tamuAllah"
            android:layout_width="10dp"
            android:layout_height="125dp"
            android:layout_weight="3"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:contentPadding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/jamaahtamuAllah"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:padding="5dp"
                    android:src="@mipmap/berdebat" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/segera"
            android:layout_width="10dp"
            android:layout_height="125dp"
            android:layout_weight="3"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:contentPadding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/segeralah"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:padding="5dp"
                    android:src="@mipmap/berdebat" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/persiapan2"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginStart="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="5dp"
            android:text="@string/persiapan" />

    </RelativeLayout>

    <RelativeLayout

        android:id="@+id/persiapan3"
        android:layout_width="135dp"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:layout_toRightOf="@id/persiapan2"
        android:orientation="horizontal"
        android:layout_toEndOf="@id/persiapan2">


    <TextView
        android:layout_width="135dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/jamaah"
        tools:ignore="NotSibling"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginRight="5dp"
        android:id="@+id/persiapan4"
        android:layout_width="135dp"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:layout_toRightOf="@id/persiapan3"
        android:orientation="horizontal"
        android:layout_toEndOf="@id/persiapan3"
        android:layout_marginEnd="5dp">


        <TextView
            android:layout_width="135dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/segeralah"
            tools:ignore="NotSibling"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginRight="5dp"
        android:id="@+id/persiapan5"
        android:layout_width="135dp"
        android:layout_height="20dp"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:layout_below="@id/persiapan2"
        android:orientation="horizontal"
        android:layout_toEndOf="@id/persiapan2"
        android:layout_marginEnd="5dp"
        android:layout_toRightOf="@id/persiapan2">


        <TextView
            android:layout_width="135dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/allah"
            tools:ignore="NotSibling"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginRight="5dp"
        android:id="@+id/persiapan9"
        android:layout_width="135dp"
        android:layout_height="20dp"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:layout_toRightOf="@id/persiapan3"
        android:layout_below="@id/persiapan3"
        android:orientation="horizontal"
        android:layout_toEndOf="@id/persiapan3"
        android:layout_marginEnd="5dp">


        <TextView
            android:layout_width="135dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/allah"
            tools:ignore="NotSibling"/>

    </RelativeLayout>






    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/sabar"
            android:layout_width="10dp"
            android:layout_height="125dp"
            android:layout_weight="3"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:contentPadding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/bersabarlah"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:padding="6dp"
                    android:src="@mipmap/berdebat" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/ikhlas"
            android:layout_width="10dp"
            android:layout_height="125dp"
            android:layout_weight="3"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:contentPadding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ikhlaslah"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:padding="6dp"
                    android:src="@mipmap/berdebat" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/teladan"
            android:layout_width="10dp"
            android:layout_height="125dp"
            android:layout_weight="3"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:contentPadding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/meneladani"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:padding="6dp"
                    android:src="@mipmap/berdebat" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="25dp"
            android:gravity="center"
            android:text="@string/bersabar"
            android:textSize="12sp" />
</LinearLayout>
<LinearLayout
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:orientation="horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="190dp"
            android:layout_marginLeft="148dp"
            android:gravity="center"
            android:text="@string/ikhlas"
            android:textSize="12sp"
            tools:ignore="NotSibling" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meneladani"
            android:textSize="12sp"
            android:layout_marginLeft="300dp"
            android:gravity="center"
            android:layout_marginStart="295dp" />

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/debat"
            android:layout_width="10dp"
            android:layout_height="125dp"
            android:layout_weight="3"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:contentPadding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/hh22"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:padding="6dp"
                    android:src="@mipmap/berdebat" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/jgnmaksiat"
            android:layout_width="10dp"
            android:layout_height="125dp"
            android:layout_weight="3"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:contentPadding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/tdkmaksiat"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:padding="6dp"
                    android:src="@mipmap/berdebat" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/tobat"
            android:layout_width="10dp"
            android:layout_height="125dp"
            android:layout_weight="3"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:contentPadding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/tobatdahulu"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:padding="6dp"
                    android:src="@mipmap/berdebat"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginLeft="27dp"
            android:gravity="center"
            android:text="@string/jangandebat"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="148dp"
            android:layout_marginLeft="148dp"
            android:gravity="center"
            android:text="@string/jgnmaksiat"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tobatdulu"
            android:textSize="12sp"
            android:layout_marginLeft="300dp"
            android:gravity="center"
            android:layout_marginStart="290dp" />
    </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/harta"
            android:layout_width="10dp"
            android:layout_height="125dp"
            android:layout_weight="3"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:contentPadding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/berhajidgnharta"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:padding="6dp"
                    android:src="@mipmap/berdebat" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/crdteman"
            android:layout_width="10dp"
            android:layout_height="125dp"
            android:layout_weight="3"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:contentPadding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/temanhaji"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:padding="3dp"
                    android:src="@mipmap/berdebat" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/crdtalbiyah"
            android:layout_width="10dp"
            android:layout_height="125dp"
            android:layout_weight="3"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:contentPadding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/talbiyah"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:padding="6dp"
                    android:src="@mipmap/berdebat" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginLeft="25dp"
            android:gravity="center"
            android:text="@string/hajidgnharta"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="153dp"
            android:layout_marginLeft="148dp"
            android:gravity="center"
            android:text="@string/mencariteman"
            android:textSize="12sp"
            tools:ignore="NotSibling" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hakikat"
            android:textSize="12sp"
            android:layout_marginLeft="300dp"
            android:gravity="center"
            android:layout_marginStart="297dp" />
    </RelativeLayout>
    </LinearLayout>-->

</RelativeLayout>